<resources>
    <string name="app_name">NewProject</string>
    <string name="pwd">Password</string>
    <string name="cpwd">Confirm Password</string>
    <string name="fname">Full Name</string>
    <string name="pnum">Phone Number</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="already">Already have an account?</string>

</resources>
