<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="10">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/butuu"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:gravity="center"
        android:paddingRight="30dp"
        android:textColor="#000000"
        android:text="StudentPOP"
        android:textSize="25sp" />
</LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/selfie"
        android:padding="15dp"
        android:layout_weight="2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/fname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/pwd" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/cpwd" />


    <RadioGroup
        android:id="@+id/radiogrp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/female" />

    </RadioGroup>

    <Button
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="#DBB134"
        android:layout_weight="0.75"
        android:text="@string/signup"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:paddingTop="10dp"
            android:text="@string/already"
            android:textSize="19sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingTop="10dp"
            android:text="@string/login"
            android:textColor="#FFA36E1B"
            android:textSize="23sp" />
    </LinearLayout>

</LinearLayout>